src/pages/v5/_components/Hero/index.module.scss
@use '../../_styles/_units.scss' as u;

.about {
	> h1 {
		font-size: min(u.Rem(108px), 9vw);
		line-height: 1;
		position: relative;
		top: -0.2em;
		font-weight: 900;

		@media (max-width: u.Rem(500px)) {
			top: 0;
			font-size: 13vw;
			text-align: center;
		}
	}
}

.hero {
	padding: u.Rem(40px);
	width: u.Rem(1080px);
	max-width: calc(100% - u.Rem(80px));
	display: flex;
	align-items: flex-start;
	gap: u.Rem(32px);

	@media (max-width: u.Rem(500px)) {
		flex-direction: column;
		align-items: center;
		gap: u.Rem(16px)
	}
}

.image {
	position: relative;

	&::after {
		content: '';
		width: 12%;
		height: 12%;
		position: absolute;
		background-color: #202020;
		right: 0px;
		top: 0px;
		clip-path: polygon(0% 0%, 100% 0%, 100% 100%);
	}

	> img {
		display: block;
		width: min(u.Rem(360px), 30vw);
		aspect-ratio: 1;
		object-fit: cover;
		clip-path: polygon(
			0% 0%, 80% 0%, 100% 20%, 100% 100%,
			20% 100%, 0% 80%, 0% 100%
		);

		@media (max-width: u.Rem(500px)) {
			width: 50vw;
		}
	}
}

.info {
	@media (max-width: u.Rem(500px)) {
		margin-top: u.Rem(16px);
	}

	> a {
		color: #000;
		text-decoration: none;
		position: relative;

		&:hover::after {
			animation: stroke-left-right 1s cubic-bezier(.25, 0, 0, 1);
		}

		&::after {
			pointer-events: none;
			content: '';
			position: absolute;
			left: 0px;
			top: 105%;
			width: 100%;
			height: u.Rem(1.5px);
			background-color: #ffa500;
		}
	}
}

@keyframes stroke-left-right {
	0% {
		clip-path: xywh(0% 0% 0% 100%);
	}
	25% {
		clip-path: xywh(0% 0% 100% 100%);
	}
	50% {
		clip-path: xywh(100% 0% 0% 100%);
	}
	100% {
		clip-path: xywh(0% 0% 100% 100%);
	}
}

.role {
	margin-top: u.Rem(16px);
	font-size: min(u.Rem(48px), 4vw);
	line-height: 1.14;
	position: relative;
	width: fit-content;

	@media (max-width: u.Rem(500px)) {
		text-align: center;
		width: 100%;

		> br {
			display: none;
		}

		&::before {
			width: 110% !important;
			top: -.2em;
			height: 140% !important;
		}
	}

	&:hover::before {
		width: 110%;
	}

	&::before {
		position: absolute;
		content: '';
		width: 20%;
		height: 100%;
		left: -2.5%;
		background-color: #ffff00;
		z-index: -1;
		transition: .25s;
	}
}

.wave {
	width: 100%;
	position: absolute;
	z-index: -1;

	> :nth-child(1) {
		animation: wave-1 16s infinite ease-in-out alternate-reverse;
	}

	> :nth-child(2) {
		animation: wave-2 16s infinite ease-in-out alternate-reverse;
	}
}

@keyframes wave-1 {
	0% {
		d: path("M-23.9352 398.892C172.467 277.124 370.201 503.499 563.471 503.499C756.741 503.499 860.385 408.323 925.687 253.659C990.99 98.9953 1162.05 68.7324 1297 98.9953")
	}
	100% {
		d: path("M-32.2802 513.569C-11.5736 448.795 155.831 361.501 349.101 361.501C542.371 361.501 736.853 448.795 895.026 448.795C1053.2 448.795 1199.8 263.73 1288.66 1.28277")
	}
}

@keyframes wave-2 {
	0% {
		d: path("M-19.9117 511.546C20.3215 406.849 169.4 372.049 361 406.849C600.5 450.349 753.496 471.44 906.001 381.849C1057.5 292.849 1095.5 70.3495 1331 3.84947")
	}
	100% {
		d: path("M-32.2801 375.714C112.195 551.531 440.149 476.735 583.988 375.714C727.827 274.694 908.727 381.016 1055.78 355.909C1202.84 330.803 1287.62 203.554 1331 13.9198")
	}
}

